Fixed section titles on smaller screens

--- a/src/components/title/Title.css
+++ b/src/components/title/Title.css
@@ -28,12 +28,15 @@
   }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
   .title-background {
     display: none;
   }
 
   .title-foreground {
+    left: -80px;
+    width: 100vw;
     margin-top: 5em;
+    text-align: center;
   }
 }
